# take-note-chrome-extension

./: .gitignore  AGENTS.md  README.md
.github/workflows/: README.md  backend-ci.yml  backend-deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  cloudbuild.yaml  pyproject.toml
backend/app/: main.py
backend/app/agents/: collect.py  models.py  pipeline.py  tools.py
backend/app/api/: methodologies.py  notes.py
backend/app/auth/: middleware.py
backend/app/core/: config.py  hygiene.py  limiter.py  logging.py
backend/app/schemas/: __init__.py  events.py  requests.py
backend/app/store/: firestore.py
backend/scripts/: seed_methodologies.py
backend/tests/: conftest.py
backend/tests/agents/: test_pipeline.py
backend/tests/api/: test_notes.py
backend/tests/bdd/: test_core_scenarios.py
backend/tests/unit/: test_auth.py  test_collect.py  test_config.py  test_health.py  test_hygiene.py  test_logging.py  test_models.py  test_protection.py  test_request_logging.py  test_schemas.py  test_seed_methodologies.py  test_store.py
docs/superpowers/plans/: 2026-06-24-backend-phase-a.md  2026-06-25-extension-phase-1.md  (+2 more)
extension/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wxt.config.ts
extension/entrypoints/: background.ts  content.ts  youtube-main.content.ts
extension/tests/: setup.ts  smoke.test.ts
infra/budget-kill-switch/: README.md  main.py
infra/cloudbuild-deploy/: README.md
infra/monitoring/: README.md  setup.sh
spec/: backend-spec.md  backend.feature  extension-spec.md
(+57 files in other folders)
